Janitor cleanup.
git-svn-id: https://jade.tilab.com/svn/jade_add-ons/trunk@1561 815794fe-97f2-0310-9206-e62f04a60ddc